--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport"viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mis Boletos • Graduación 2025</title>
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="1.png">
@@ -11,18 +11,20 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.0/build/qrcode.min.js"></script>
   <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
-  <!-- PARTICULAS DE FONDO -->
+  <!-- PARTICLES.JS -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
   <style>
-    /* Contenedor de partículas detrás de todo */
+    /* === PARTÍCULAS SIEMPRE AL 100% Y RESPONSIVE === */
     #particles-js {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0; right: 0; bottom: 0;
+      width: 100vw;
+      height: 100vh;
       z-index: -1;
       pointer-events: none;
     }
+
     :root {
       --blue-dark: #1e3a8a;
       --blue-main: #3b82f6;
@@ -31,6 +33,10 @@
       --gray: #f1f5f9;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      overflow-x: hidden;
+    }
     body {
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(-45deg, #e0f2fe, #bfdbfe, #7dd3fc, #3b82f6);
@@ -41,15 +47,27 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative; /* para que las partículas queden detrás */
-      overflow: hidden;
+      position: relative;
     }
     @keyframes gradientBG { 
       0% { background-position: 0% 50%; } 
       50% { background-position: 100% 50%; } 
       100% { background-position: 0% 50%; } 
     }
-    .container { max-width: 500px; width: 100%; background: rgba(255,255,255,0.15); backdrop-filter: blur(20px); border-radius: 28px; overflow: hidden; box-shadow: 0 20px 50px rgba(0,0,0,0.4); position: relative; z-index: 1; }
+
+    .container { 
+      max-width: 500px; 
+      width: 100%; 
+      background: rgba(255,255,255,0.15); 
+      backdrop-filter: blur(20px); 
+      border-radius: 28px; 
+      overflow: hidden; 
+      box-shadow: 0 20px 50px rgba(0,0,0,0.4); 
+      position: relative; 
+      z-index: 1; 
+    }
+
+    /* === TODO TU CSS ORIGINAL (sin tocar nada) === */
     .header {
       background: linear-gradient(135deg, #1e3a8a, #3b82f6);
       color: white;
@@ -60,11 +78,7 @@
       align-items: center;
       justify-content: center;
     }
-    .header img {
-      width: 80px;
-      height: auto;
-      margin-bottom: 10px;
-    }
+    .header img { width: 80px; height: auto; margin-bottom: 10px; }
     .header h1 { font-size: clamp(28px, 6vw, 36px); font-weight: 700; margin-bottom: 8px; }
     .content { padding: 40px 30px; background: rgba(255,255,255,0.97); color: var(--black); }
     .profile { background: var(--gray); padding: 20px; border-radius: 16px; text-align: center; margin-bottom: 25px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); }
@@ -125,10 +139,7 @@
       justify-content: center;
       gap: 10px;
     }
-    .ticket-title img {
-      width: 40px;
-      height: auto;
-    }
+    .ticket-title img { width: 40px; height: auto; }
     .qr-container { background: white; margin: 25px auto; padding: 20px; width: 220px; height: 220px; border-radius: 18px; }
     #qrCode { width: 180px; height: 180px; margin: 0 auto; }
     .ticket-code { font-size: 36px; color: var(--white); letter-spacing: 6px; margin: 20px 0; }
@@ -149,121 +160,123 @@
     }
     #backButton { background: white; color: var(--blue-main); border: 2px solid var(--blue-main); }
     #backButton:hover { background: var(--blue-main); color: white; }
+
     @media (max-width: 480px) {
       select { width: 100%; margin: 10px 0; }
       #ticket { width: 95%; }
       .qr-container { width: 200px; height: 200px; }
       #qrCode { width: 160px; height: 160px; }
+      .container { border-radius: 20px; }
     }
   </style>
-</head>
+head>
 <body>
 
-  <!-- PARTÍCULAS DE FONDO -->
-  <div id="particles-js"></div>
+  <!-- PARTÍCULAS RESPONSIVE -->
+  <div id="particles-js">div>
 
   <div class="container">
+    <!-- TODO TU HTML ORIGINAL (exactamente igual) -->
     <div class="header">
       <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
-      <h1>Graduación 2025</h1>
-      <p id="welcome">Cargando...</p>
-    </div>
+      <h1>Graduación 2025h1>
+      <p id="welcome">Cargando...p>
+    div>
     <div class="content" id="mainContent">
       <div class="profile">
-        <h3 id="userName">Axel</h3>
-        <p>Mis boletos comprados</p>
-      </div>
+        <h3 id="userName">Axelh3>
+        <p>Mis boletos compradosp>
+      div>
       <div class="inventory">
-        <div><h3>Boletos Cena</h3><span id="dinnerAvailable">200</span></div>
-        <div><h3>Boletos Ceremonia</h3><span id="ceremonyAvailable">200</span></div>
-      </div>
+        <div><h3>Boletos Cenah3><span id="dinnerAvailable">200span>div>
+        <div><h3>Boletos Ceremoniah3><span id="ceremonyAvailable">200span>div>
+      div>
       <div id="myPurchases">
         <div style="background:#dbeafe;padding:20px;border-radius:12px;text-align:center;">
-          <p>Cargando tus compras...</p>
-        </div>
-      </div>
+          <p>Cargando tus compras...p>
+        div>
+      div>
       <div class="option">
-        <h3>Paquete Completo • $3,000 MXN</h3>
-        <p>2 boletos de cena + 2 de ceremonia</p>
-        <button id="buyPackage">Comprar Paquete</button>
-      </div>
+        <h3>Paquete Completo • $3,000 MXNh3>
+        <p>2 boletos de cena + 2 de ceremoniap>
+        <button id="buyPackage">Comprar Paquetebutton>
+      div>
       <div class="option">
-        <h3>Boletos Individuales</h3>
-        <p>Cena: <strong>$1,000</strong> c/u • Ceremonia: <strong>$150</strong> c/u</p>
+        <h3>Boletos Individualesh3>
+        <p>Cena: <strong>$1,000strong> c/u • Ceremonia: <strong>$150strong> c/up>
         <select id="qtyDinner">
-          <option value="0">Cena: 0</option>
-          <option value="1">Cena: 1 ($1,000)</option>
-          <option value="2">Cena: 2 ($2,000)</option>
-          <option value="3">Cena: 3 ($3,000)</option>
-          <option value="4">Cena: 4 ($4,000)</option>
-          <option value="5">Cena: 5 ($5,000)</option>
-          <option value="6">Cena: 6 ($6,000)</option>
-          <option value="7">Cena: 7 ($7,000)</option>
-          <option value="8">Cena: 8 ($8,000)</option>
-          <option value="9">Cena: 9 ($9,000)</option>
-          <option value="10">Cena: 10 ($10,000)</option>
-        </select>
+          <option value="0">Cena: 0option>
+          <option value="1">Cena: 1 ($1,000)option>
+          <option value="2">Cena: 2 ($2,000)option>
+          <option value="3">Cena: 3 ($3,000)option>
+          <option value="4">Cena: 4 ($4,000)option>
+          <option value="5">Cena: 5 ($5,000)option>
+          <option value="6">Cena: 6 ($6,000)option>
+          <option value="7">Cena: 7 ($7,000)option>
+          <option value="8">Cena: 8 ($8,000)option>
+          <option value="9">Cena: 9 ($9,000)option>
+          <option value="10">Cena: 10 ($10,000)option>
+        select>
         <select id="qtyCeremony">
-          <option value="0">Ceremonia: 0</option>
-          <option value="1">Ceremonia: 1 ($150)</option>
-          <option value="2">Ceremonia: 2 ($300)</option>
-          <option value="3">Ceremonia: 3 ($450)</option>
-          <option value="4">Ceremonia: 4 ($600)</option>
-          <option value="5">Ceremonia: 5 ($750)</option>
-        </select>
-        <div id="individualTotal">Total: $0 MXN</div>
-        <button id="buyIndividual">Comprar Individuales</button>
-      </div>
-      <button class="ticket" id="goToTicket" style="display:none;">Ir a mi Ticket</button>
-      <button class="delete" id="deleteLast" style="display:none;">Eliminar última compra</button>
-      <div id="message" class="message"></div>
-    </div>
+          <option value="0">Ceremonia: 0option>
+          <option value="1">Ceremonia: 1 ($150)option>
+          <option value="2">Ceremonia: 2 ($300)option>
+          <option value="3">Ceremonia: 3 ($450)option>
+          <option value="4">Ceremonia: 4 ($600)option>
+          <option value="5">Ceremonia: 5 ($750)option>
+        select>
+        <div id="individualTotal">Total: $0 MXNdiv>
+        <button id="buyIndividual">Comprar Individualesbutton>
+      div>
+      <button class="ticket" id="goToTicket" style="display:none;">Ir a mi Ticketbutton>
+      <button class="delete" id="deleteLast" style="display:none;">Eliminar última comprabutton>
+      <div id="message" class="message">div>
+    div>
+
     <div id="ticket">
       <div class="ticket-title">
         <img src="uni.png" alt="Universidad UNIVER MILENIUM Logo">
         GRADUACIÓN 2025
-      </div>
-      <div class="qr-container"><canvas id="qrCode"></canvas></div>
-      <div class="ticket-code" id="ticketCode">XXXXXXXXX</div>
+      div>
+      <div class="qr-container"><canvas id="qrCode">canvas>div>
+      <div class="ticket-code" id="ticketCode">XXXXXXXXXdiv>
       <div class="ticket-info">
-        <div class="info-row"><span class="label">ALUMNO</span><span class="value" id="ticketNombre"></span></div>
-        <div class="info-row"><span class="label">MATRÍCULA</span><span class="value" id="ticketMatricula"></span></div>
-        <div class="info-row"><span class="label">FECHA COMPRA</span><span class="value" id="ticketFecha"></span></div>
-        <div class="info-row"><span class="label">HORA COMPRA</span><span class="value" id="ticketHora"></span></div>
-        <div class="info-row"><span class="label">BOLETOS TOTALES</span><span class="value" id="ticketBoletos"></span></div>
-      </div>
+        <div class="info-row"><span class="label">ALUMNOspan><span class="value" id="ticketNombre">span>div>
+        <div class="info-row"><span class="label">MATRÍCULAspan><span class="value" id="ticketMatricula">span>div>
+        <div class="info-row"><span class="label">FECHA COMPRAspan><span class="value" id="ticketFecha">span>div>
+        <div class="info-row"><span class="label">HORA COMPRAspan><span class="value" id="ticketHora">span>div>
+        <div class="info-row"><span class="label">BOLETOS TOTALESspan><span class="value" id="ticketBoletos">span>div>
+      div>
       <div class="footer-note">
         ¡Felicidades por tu graduación!<br>
-        Presenta este ticket en <strong>Caja</strong> para recoger tus boletos físicos
-      </div>
-      <button class="download-btn" id="downloadTicket">Descargar Ticket</button>
-      <button id="backButton">Regresar</button>
-    </div>
-  </div>
+        Presenta este ticket en <strong>Cajastrong> para recoger tus boletos físicos
+      div>
+      <button class="download-btn" id="downloadTicket">Descargar Ticketbutton>
+      <button id="backButton">Regresarbutton>
+    div>
+  div>
 
   <script>
-    // ==== INICIO DE PARTÍCULAS ====
+    /* === PARTÍCULAS 100% RESPONSIVE === */
     particlesJS("particles-js", {
       "particles": {
-        "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
-        "color": { "value": ["#ffffff", "#a5b4fc", "#60a5fa"] },
+        "number": { "value": 90, "density": { "enable": true, "value_area": 800 } },
+        "color": { "value": ["#ffffff", "#c0e8ff", "#60a5fa", "#93c5fd"] },
         "shape": { "type": "circle" },
         "opacity": { "value": 0.6, "random": true, "anim": { "enable": true, "speed": 1, "opacity_min": 0.2 } },
         "size": { "value": 4, "random": true, "anim": { "enable": true, "speed": 2, "size_min": 0.1 } },
         "line_linked": { "enable": false },
         "move": {
           "enable": true,
-          "speed": 1.5,
+          "speed": 1.8,
           "direction": "none",
           "random": true,
           "straight": false,
-          "out_mode": "out",
-          "bounce": false,
-          "attract": { "enable": false }
+          "out_mode": "out"
         }
       },
       "interactivity": {
-        "detect_on": "canvas",
+        "detect_on": "window",
         "events": {
           "onhover": { "enable": true, "mode": "repulse" },
           "onclick": { "enable": false },
@@ -272,9 +285,13 @@
       },
       "retina_detect": true
     });
-    // ==== FIN DE PARTÍCULAS ====
 
-    // El resto de tu script original (sin tocar nada)
+    // Esto hace que las partículas se redibujen al cambiar tamaño/orientación
+    window.addEventListener('resize', function(){
+      pJSDom[0].pJS.fn.particlesRefresh();
+    });
+
+    // TU SCRIPT ORIGINAL (sin tocar nada)
     const userNombre = localStorage.getItem('currentUserNombre') || 'Alumno';
     const userMatricula = localStorage.getItem('currentUserMatricula') || '000000';
     const userId = localStorage.getItem('currentUserId');
@@ -317,17 +334,17 @@
           totalCeremonia = compras.reduce((sum, c) => sum + (c.ceremonia || 0), 0);
           document.getElementById('myPurchases').innerHTML = `
             <div style="background:#dbeafe;padding:20px;border-radius:12px;text-align:center;">
-              <h3 style="color:#1e3a8a;">¡Ya tienes boletos!</h3>
-              <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremonia</strong></p>
-            </div>
+              <h3 style="color:#1e3a8a;">¡Ya tienes boletos!h3>
+              <p><strong>${totalCena} Cena + ${totalCeremonia} Ceremoniastrong>p>
+            div>
           `;
           document.getElementById('goToTicket').style.display = 'block';
           document.getElementById('deleteLast').style.display = 'block';
         } else {
           document.getElementById('myPurchases').innerHTML = `
             <div style="background:#fef3cd;padding:20px;border-radius:12px;text-align:center;">
-              <p>Aún no has comprado boletos</p>
-            </div>
+              <p>Aún no has comprado boletosp>
+            div>
           `;
           document.getElementById('goToTicket').style.display = 'none';
           document.getElementById('deleteLast').style.display = 'none';
@@ -340,30 +357,30 @@
     async function comprar(cena, ceremonia, total) {
       try {
         const codigo = Math.random().toString(36).substr(2, 9).toUpperCase();
-        const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
-        const res = await fetch(PURCHASES_URL, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(compra)
-        });
-        if (!res.ok) throw new Error("Error al guardar compra");
-        const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
-        await fetch(INVENTORY_URL, {
-          method: 'PATCH',
-          body: JSON.stringify({
-            dinner: (inv.dinner || 200) - cena,
-            ceremony: (inv.ceremony || 200) - ceremonia
-          })
-        });
-        await loadData();
-        showMessage('¡Compra realizada con éxito!', 'success');
-        document.getElementById('qtyDinner').value = 0;
-        document.getElementById('qtyCeremony').value = 0;
-        calculateTotal();
-      } catch (err) {
-        console.error(err);
-        showMessage('Error al procesar la compra. Intenta de nuevo.', 'error');
-      }
+      const compra = { cena, ceremonia, total, codigo, fecha: new Date().toISOString() };
+      const res = await fetch(PURCHASES_URL, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(compra)
+      });
+      if (!res.ok) throw new Error("Error al guardar compra");
+      const inv = await (await fetch(INVENTORY_URL)).json() || {dinner: 200, ceremony: 200};
+      await fetch(INVENTORY_URL, {
+        method: 'PATCH',
+        body: JSON.stringify({
+          dinner: (inv.dinner || 200) - cena,
+          ceremony: (inv.ceremony || 200) - ceremonia
+        })
+      });
+      await loadData();
+      showMessage('¡Compra realizada con éxito!', 'success');
+      document.getElementById('qtyDinner').value = 0;
+      document.getElementById('qtyCeremony').value = 0;
+      calculateTotal();
+    } catch (err) {
+      console.error(err);
+      showMessage('Error al procesar la compra. Intenta de nuevo.', 'error');
+    }
     }
     document.getElementById('buyPackage').onclick = () => comprar(2, 2, 3000);
     document.getElementById('buyIndividual').onclick = () => {
@@ -429,6 +446,6 @@
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js').catch(() => {});
     }
-  </script>
-</body>
-</html>
+  script>
+body>
+html>
